<resources>
    <string name="app_name">Traveller</string>
    <string name="col1">Name</string>
    <string name="col2">ID</string>
    <string name="col3">Actions</string>
    <string name="row1name">xxxxxx</string>
    <string name="row1id">xxxxxx</string>
    <string name="row1action">Delete</string>
    <string name="title">Traveller</string>
    <string name="user">User Name</string>
    <string name="email">E-Mail</string>
    <string name="Gen">Gender</string>
    <string name="DOB">Date of Birth</string>
    <string name="password">Password</string>
    <string name="retypePW">Re-Type Password</string>
    <string name="reg">Register</string>
    <string name="clear">Clear</string>
    <string name="log">Login</string>
    <string name="hotel">Hotels</string>
    <string name="place">Places</string>
    <string name="guide">Guide</string>
    <string name="taxi">Taxi</string>
    <string name="summary">Summary</string>
    <string name="about">About Users</string>
    <string name="stat">Statistical View</string>
    <string name="statistics">Statistics</string>
    <string name="fav">Most Visited Place :</string>
    <string name="fav2">Total Users :</string>
    <string name="favcountry">Country of Most Users :</string>
    <string name="favhotel">Favourite Hotel :</string>
    <string name="New_user">Are You a New User?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="countries_array">
        <item>Sri lanka</item>
        <item>India</item>
        <item>australia</item>
        <item>Newzealand</item>
        <item>USA</item>
        <item>Russia</item>
        <item>Japan</item>
        <item>England</item>
    </string-array>
    <string name="title_activity_register">Register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>